# newsletter-agent

./: DEV_NOTES.md  Procfile  README.md  pyproject.toml  setup.sh
src/: enrich_runner.py  weekly_newsletter_ui.py
src/agents/: reading_agent.py
src/weekly_newsletter/: draft.py  enricher.py  news_db_airtable.py
